--- a/Tesis_Escrito/main.tex
+++ b/Tesis_Escrito/main.tex
@@ -6,6 +6,9 @@
 \usepackage{amsmath}
 \usepackage{mathtools}
 
+% To be removed later, since these won't be used in the final version. 
+\usepackage{xcolor}
+
 \begin{document}
 	
 \newtheorem{definition}{Definition}
