--- a/Tesis_Escrito/TeX_files/Bibliography.bib
+++ b/Tesis_Escrito/TeX_files/Bibliography.bib
@@ -89,3 +89,18 @@
 	publisher = {Cambridge University Press},
 	note      = {to appear}
 }
+
+@article{wang2020intuitive,
+	title={An intuitive tutorial to Gaussian processes regression},
+	author={Wang, Jie},
+	journal={arXiv preprint arXiv:2009.10862},
+	year={2020}
+}
+
+@book{rasmussen2006gaussian,
+	title={Gaussian processes for machine learning},
+	author={Rasmussen, Carl Edward and Williams, Christopher KI and others},
+	volume={1},
+	year={2006},
+	publisher={Springer}
+}
