--- a/Tesis_Escrito/TeX_files/GP_reg.tex
+++ b/Tesis_Escrito/TeX_files/GP_reg.tex
@@ -48,7 +48,9 @@ We can split up the set $\mathcal{D}$ into training and test, defining $\mathcal
 where $\boldsymbol{X} = [ x_1, x_2, \ldots , x_n ]$, $\boldsymbol{f} = [ f(x_1), f(x_2), \ldots, f(x_n) ]$, $\mu= [ m(x_1), m(x_2), \ldots, m(x_n) ]$ and $k$ the kernel or covariance function of the process. By convention, it is customary to set $m(\boldsymbol{X}) = 0$, but there is a reasoning behind this. When dealing with the type of data generally modelled by these types of functions, it is common (encouraged even) to normalize the data before applying these methods to it. Another important piece of shorthand notation we will use is $K=k(\boldsymbol{X}, \boldsymbol{X})$, $K_*=k(\boldsymbol{X}, \boldsymbol{X}_*)$, and $K_{**}=k(\boldsymbol{X}_*, \boldsymbol{X}_*)$. Note that since the number of training points need not equal the number of test points, then $n$ has not attributable relationship with $n^*$ and we cannot state any properties of the matrix $K_*$, much less say that it is a square matrix. 
 
 Since we have formally defined the distribution of $\boldsymbol{f}$ and we know that $\boldsymbol{f}_*$ is the same distribution but considering a different set of data points $\boldsymbol{X}_* = [x^*_1, \ldots, x^*_n]$, we can define the joint distribution of these vectors as 
-\[ \begin{bmatrix}
+\begin{equation}
+\label{joint_dist}
+ \begin{bmatrix}
 	\boldsymbol{f} \\
 	\boldsymbol{f}_*
 \end{bmatrix} \sim \mathcal{N}\left( \begin{bmatrix}
@@ -58,11 +60,52 @@ Since we have formally defined the distribution of $\boldsymbol{f}$ and we know 
 K & K_* \\
 K_*^T & K_{**}
 \end{bmatrix} \right), 
-\]
+\end{equation}
 
 which is the joint probability distribution $\mathbb{P}(\boldsymbol{f}, \boldsymbol{f}_* | \boldsymbol{X}, \boldsymbol{X}_*)$. This is a massive step in constructing the regression model but we are still missing one component. When dealing with regression and prediction of values outside of the original training dataset, we do not need the joint probability, but the conditional probability of the test set given everything else we know. Formally, this means that we need to find the probability distribution of $\mathbb{P}(\boldsymbol{f}_* | \boldsymbol{X}, \boldsymbol{X}_*, \boldsymbol{f})$. Luckily, since we are dealing with Gaussian distributions, there is a very neat closed form expression that describes this probability. Referring to section $A.2$ of \cite{rasmussen2006gaussian}, and noting that the mean for both $\boldsymbol{f}$ and $\boldsymbol{f}_*$ is 0, then 
 \[ \boldsymbol{f}_* | \boldsymbol{f} \sim \mathcal{N}(K_*^T K^{-1} \boldsymbol{f}, K_{**} - K_*^T K^{-1} K_*). \]
 
 This probability function is what is used to calculate out of sample predictions for the out of sample data $\boldsymbol{X}_*$. 
+
+\subsubsection{Gaussian Process Regression Over Noisy Observations}
+
+When there is inherent randomness or noise in the signals being calculated, the structure of the problem itself changes. If we can assume that the noisy signals we are receiving are of the form $y = f(\boldsymbol{x}) + \varepsilon$ with the noise or inherent randomness captured by $\varepsilon$ and these being independent, identically distributed observations of a normal or Gaussian distribution, the covariance of the observations therefore becomes 
+\[ \text{cov}(\boldsymbol{y}) = K(\boldsymbol{X}, \boldsymbol{X}) + \sigma^2 I, \]
+with $I$ the identity matrix. In practical terms this means that the inherent variance of every observation is present as an added term on the diagonal of the covariance matrix (this is because of the assumption that the noise is independent). This change causes the joint distribution originally defined in equation \ref{joint_dist} to
+\[ 
+ \begin{bmatrix}
+	\boldsymbol{y} \\
+	\boldsymbol{f}_*
+\end{bmatrix} \sim \mathcal{N}\left( \begin{bmatrix}
+	0 \\
+	0
+\end{bmatrix} , \begin{bmatrix}
+	K + \sigma^2 I & K_* \\
+	K_*^T & K_{**}
+\end{bmatrix} \right), 
+ \]
+
+and the conditional distributions for prediction are therefore 
+\begin{align*}
+	\boldsymbol{f}_* | \boldsymbol{X}, \boldsymbol{y}, \boldsymbol{X}_* &\sim \mathcal{N}(\bar{\boldsymbol{f}_*}, \text{cov}(\boldsymbol{f}_*)), \text{ where} \\
+	\bar{\boldsymbol{f}_*} &\coloneqq \mathbb{E}[\boldsymbol{f}_* | \boldsymbol{X}, \boldsymbol{y}, \boldsymbol{X}_*] = K_*^T [K + \sigma^2 I]^{-1} \boldsymbol{y} \\
+	\text{cov}(\bar{\boldsymbol{f}_*}) &= K_{**} -  K_*^T [K + \sigma^2 I]^{-1} K_*.
+\end{align*}
+
+These equations are for the entire training and test set though. For a test point $x_*$, we can define the vector $\boldsymbol{k}_*$ as the vector of covariances between this new test point and each of the points in the training dataset. This would be equivalent to taking the column associated with that single point from the test data matrix $K_*$. If we wanted just the closed form for this single out of sample observation, that would be 
+\begin{align*}
+\bar{f_*} &= \boldsymbol{k}_*^T(K + \sigma^2 I)^{-1} \boldsymbol{y}, \\
+\mathbb{V}(\bar{f_*}) &= k(x_*, x_*) - \boldsymbol{k}_*^T (K + \sigma^2 I)^{-1} \boldsymbol{k}_*.
+\end{align*}
+
+
+
+
+
+
+
+
+
+ 
  
 
